5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1596_2895.log
== TEST (2019-03-25 19:00:40) 
-- CODE:
input("Quantidade de jogos: ")

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:04) 
-- CODE:
input("Quantidade de jogos: ")
input("Valor de cada jogo: ")
input("Valor do frete: ")

-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:04:48) 
-- CODE:
input("quantidade de jogos: ")
input("valor de cada jogo: ")
input("valor do frete: ")
var=float(input(quantidade de jogos * valor de cada jogo + valor do frete))
-- ERROR:
File "XXXX", line 4
    var=float(input(quantidade de jogos * valor de cada jogo + valor do frete))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:05:16) 
-- CODE:
input("quantidade de jogos: ")
input("valor de cada jogo: ")
input("valor do frete: ")
var=float(input(quantidade de jogos * valor de cada jogo + valor do frete))
print(var)
-- ERROR:
File "XXXX", line 4
    var=float(input(quantidade de jogos * valor de cada jogo + valor do frete))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:05:20) 
-- CODE:
input("quantidade de jogos: ")
input("valor de cada jogo: ")
input("valor do frete: ")
var=float(input(quantidade de jogos * valor de cada jogo + valor do frete))
print(var)
-- EXECUTION TIME:
0.144747
-- ERROR:
  File "/home/codebench/codes/1596/2895/main.py", line 4
    var=float(input(quantidade de jogos * valor de cada jogo + valor do frete))
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:08:43) 
-- CODE:
input("quantidade de jogos: ")
input("valor de cada jogo: ")
input("valor do frete: ")
var1=float(input(quantidade de jogos))
var2=float(input(valor de cada jogo))
var3=float(input(valor do frete))
var4=float(var1+var2+var3)
print(var4)
-- ERROR:
File "XXXX", line 4
    var1=float(input(quantidade de jogos))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:09:31) 
-- CODE:
input("quantidade de jogos: ")
input("valor de cada jogo: ")
input("valor do frete: ")
var1=float(input(quantidade de jogos: ))
var2=float(input(valor de cada jogo: ))
var3=float(input(valor do frete: ))
var4=float(var1+var2+var3)
print(var4)
-- ERROR:
File "XXXX", line 4
    var1=float(input(quantidade de jogos: ))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:10:32) 
-- CODE:
input("quantidade de jogos: ")
input("valor de cada jogo: ")
input("valor do frete: ")
var1=input(quantidade de jogos: )
var2=input(valor de cada jogo: )
var3=input(valor do frete: )
var4=(var1+var2+var3)
print(var4)
-- ERROR:
File "XXXX", line 4
    var1=input(quantidade de jogos: )
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:12:04) 
-- CODE:
input("quantidade de jogos: ")
input("valor de cada jogo: ")
input("valor do frete: ")
var1=float(input("quantidade de jogos: "))
var2=float(input("valor de cada jogo: "))
var3=float(input("valor do frete: "))
var4=(var1+var2+var3)
print(var4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:13:17) 
-- CODE:
input("quantidade de jogos: ")
input("valor de cada jogo: ")
input("valor do frete: ")
var1=float(input("quantidade de jogos: "))
var2=float(input("valor de cada jogo: "))
var3=float(input("valor do frete: "))
var4=(var1*var2+var3)
print(var4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var1=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:13:41) 
-- CODE:
var1=float(input("quantidade de jogos: "))
var2=float(input("valor de cada jogo: "))
var3=float(input("valor do frete: "))
var4=(var1*var2+var3)
print(var4)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:14:01) 
-- CODE:
var1=float(input("quantidade de jogos: "))
var2=float(input("valor de cada jogo: "))
var3=float(input("valor do frete: "))
var4=(var1*var2+var3)
print(var4)
-- EXECUTION TIME:
0.19616
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:15:31) 
-- CODE:
var1=input("quantidade de jogos: ")
var2=input("valor de cada jogo: ")
var3=input("valor do frete: ")
var4=(var1*var2+var3)
print(var4)
-- EXECUTION TIME:
0.131236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    var4=(var1*var2+var3)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:16:17) 
-- CODE:
var1=float(input("quantidade de jogos: "))
var2=float(input("valor de cada jogo: "))
var3=float(input("valor do frete: "))
var4=(var1*var2+var3)
print(var4)
-- EXECUTION TIME:
0.218864
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
